--- a/redraw_mimic/index.html
+++ b/redraw_mimic/index.html
@@ -148,11 +148,7 @@
     <main>
         <!-- Hero Section -->
         <section id="hero"
-            class="relative bg-gradient-to-br from-purple-600 to-indigo-800 text-white py-28 md:py-40 text-center overflow-hidden shadow-2xl rounded-b-3xl"
-            style="background-image: url(https://is2you2.github.io/redraw_mimic/title.png);
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: center;">
+            class="relative bg-gradient-to-br from-purple-600 to-indigo-800 text-white py-28 md:py-40 text-center overflow-hidden shadow-2xl rounded-b-3xl">
             <div class=" section-container relative z-10">
                 <h1 class="text-5xl md:text-7xl font-extrabold mb-6 leading-tight drop-shadow-lg animate-on-load">
                     세상을 다시그리는 <span class="block mt-4 text-purple-200">그림또따</span>
@@ -180,8 +176,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-12 items-center">
                 <div class="md:col-span-1 flex justify-center animate-on-scroll scale-in slide-right delay-200">
                     <!-- Placeholder image for profile picture - make it more artistic -->
-                    <img src="https://is2you2.github.io/redraw_mimic/image.png"
-                        alt="당신의 프로필 사진"
+                    <img src="https://is2you2.github.io/redraw_mimic/image.png" alt="당신의 프로필 사진"
                         class="w-64 h-64 md:w-80 md:h-80 rounded-full object-cover shadow-xl border-4 border-purple-200">
                 </div>
                 <div class="md:col-span-2 text-lg leading-relaxed text-gray-700 animate-on-scroll slide-left delay-300">
@@ -225,11 +220,14 @@
                         </p>
                         <div class="flex flex-wrap gap-2">
                             <span
-                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">이벤트 영상 파트</span>
+                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">이벤트
+                                영상 파트</span>
                             <span
-                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">추억 회상</span>
+                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">추억
+                                회상</span>
                             <span
-                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">애니메이션 프로필 사진</span>
+                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">애니메이션
+                                프로필 사진</span>
                         </div>
                     </div>
                 </div>
@@ -238,8 +236,7 @@
                 <div
                     class="bg-gray-50 rounded-xl shadow-lg overflow-hidden card-hover-effect group animate-on-scroll delay-200">
                     <div class="relative overflow-hidden">
-                        <img src="https://is2you2.github.io/redraw_mimic/character.gif"
-                            alt="그래픽 작업 2"
+                        <img src="https://is2you2.github.io/redraw_mimic/character.gif" alt="그래픽 작업 2"
                             class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-6 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -258,7 +255,8 @@
                             <span
                                 class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">가상캐릭터</span>
                             <span
-                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">그림체 무관</span>
+                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">그림체
+                                무관</span>
                         </div>
                     </div>
                 </div>
@@ -267,8 +265,7 @@
                 <div
                     class="bg-gray-50 rounded-xl shadow-lg overflow-hidden card-hover-effect group animate-on-scroll delay-300">
                     <div class="relative overflow-hidden">
-                        <img src="https://is2you2.github.io/redraw_mimic/great_person.gif"
-                            alt="그래픽 작업 3"
+                        <img src="https://is2you2.github.io/redraw_mimic/great_person.gif" alt="그래픽 작업 3"
                             class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-6 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -338,8 +335,8 @@
             <p>&copy; 2025 그림또따. 모든 권리 보유. | 디자인 및 개발: 그림또따</p>
             <div class="pt-4 border-t border-gray-700 mt-4">
                 <p class="font-bold text-gray-400 mb-2">사업자 정보</p>
-                <p>상호: 그림또따</p>
-                <p>사업자등록번호: 798-99-01570</p>
+                <p>상호: 플레이디버그연구소</p>
+                <p>사업자등록번호: 568-61-00832</p>
                 <p>사업장 주소: 서울특별시 관악구 쑥고개로2길 11, 201호(신림동)</p>
             </div>
         </div>
