--- a/redraw_mimic/index.html
+++ b/redraw_mimic/index.html
@@ -197,14 +197,15 @@
 
         <!-- Projects Section -->
         <section id="projects" class="py-20 md:py-32 bg-white rounded-xl shadow-lg mt-16 section-container">
-            <h2 class="text-4xl font-bold text-center mb-12 text-gray-800 animate-on-scroll">최근 작업물</h2>
+            <h2 class="text-4xl font-bold text-center mb-12 text-gray-800 animate-on-scroll">예시 작업물</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                 <!-- Project Card 1 -->
                 <div
                     class="bg-gray-50 rounded-xl shadow-lg overflow-hidden card-hover-effect group animate-on-scroll delay-100">
                     <div class="relative overflow-hidden">
-                        <img src="https://is2you2.github.io/redraw_mimic/photo.gif" alt="그래픽 작업 1"
-                            class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110">
+                        <div
+                            class="w-full h-64 bg-[url('https://is2you2.github.io/redraw_mimic/photo.gif')] bg-cover bg-top">
+                        </div>
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-6 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                             <a href="https://youtube.com/shorts/EEoj_Fz_ybk" target="_blank"
@@ -236,8 +237,9 @@
                 <div
                     class="bg-gray-50 rounded-xl shadow-lg overflow-hidden card-hover-effect group animate-on-scroll delay-200">
                     <div class="relative overflow-hidden">
-                        <img src="https://is2you2.github.io/redraw_mimic/character.gif" alt="그래픽 작업 2"
-                            class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110">
+                        <div
+                            class="w-full h-64 bg-[url('https://is2you2.github.io/redraw_mimic/character.gif')] bg-cover bg-top">
+                        </div>
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-6 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                             <a href="https://youtube.com/shorts/EsYovoPkheI" target="_blank"
@@ -265,8 +267,9 @@
                 <div
                     class="bg-gray-50 rounded-xl shadow-lg overflow-hidden card-hover-effect group animate-on-scroll delay-300">
                     <div class="relative overflow-hidden">
-                        <img src="https://is2you2.github.io/redraw_mimic/great_person.gif" alt="그래픽 작업 3"
-                            class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110">
+                        <div
+                            class="w-full h-64 bg-[url('https://is2you2.github.io/redraw_mimic/great_person.gif')] bg-cover bg-top">
+                        </div>
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-6 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                             <a href="https://youtube.com/shorts/UPfbe3VbSd0" target="_blank"
