--- a/pjcone_landing/index.html
+++ b/pjcone_landing/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Project: Cone | 협업 도구</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap"
-    rel="stylesheet" />
+  <title>Project: Cone | 기술 소개</title>
+
+  <!-- Pretendard Variable (기술 문서 스타일 폰트) -->
+  <link rel="stylesheet" as="style" crossorigin
+    href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css" />
+
   <style>
     * {
       box-sizing: border-box;
@@ -15,146 +18,135 @@
     }
 
     body {
-      font-family: 'Inter', sans-serif;
-      background: radial-gradient(circle at top, #10141a 0%, #07090c 100%);
-      color: #eaeaea;
-      overflow-x: hidden;
-      scroll-behavior: smooth;
+      font-family: "Pretendard Variable", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "Noto Sans KR", sans-serif;
+      background: #f7f9fb;
+      color: #222;
+      line-height: 1.65;
     }
 
     header {
-      position: relative;
+      padding: 100px 20px 70px;
       text-align: center;
-      padding: 120px 20px 80px;
-      background: linear-gradient(180deg, #0b0f16 0%, #090b10 100%);
-      box-shadow: 0 0 60px #00e5ff33 inset;
+      background: #ffffff;
+      border-bottom: 1px solid #e5e7eb;
     }
 
-    /* TODO: 로고 이미지 교체 시 아래 경로 변경 */
     .logo {
-      width: 140px;
+      width: 120px;
       height: auto;
       margin-bottom: 25px;
-      filter: drop-shadow(0 0 10px #00e5ff80);
     }
 
     header h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 3rem;
-      color: #00e5ff;
-      text-shadow: 0 0 20px #00e5ff;
-      letter-spacing: 1px;
-      margin-bottom: 10px;
+      font-size: 2.8rem;
+      font-weight: 700;
+      margin-bottom: 15px;
+      color: #111;
+      letter-spacing: -0.02em;
     }
 
     header p {
       font-size: 1.15rem;
-      color: #b0c4d4;
       max-width: 700px;
       margin: 0 auto 40px;
-      line-height: 1.6;
+      color: #555;
     }
 
     .btn-group {
       display: flex;
       justify-content: center;
-      gap: 20px;
+      gap: 14px;
       flex-wrap: wrap;
     }
 
     .btn {
-      display: inline-block;
-      padding: 14px 32px;
+      padding: 12px 26px;
       border-radius: 8px;
       font-weight: 600;
-      font-size: 1rem;
-      letter-spacing: 0.5px;
-      color: #00e5ff;
-      border: 1px solid #00e5ff;
+      font-size: 0.95rem;
       text-decoration: none;
-      transition: all 0.3s ease;
-      background: rgba(0, 229, 255, 0.05);
-      box-shadow: 0 0 15px #00e5ff33;
+      border: 1px solid #3b82f6;
+      background: #3b82f6;
+      color: #fff;
+      transition: 0.2s ease;
+    }
+
+    .btn.secondary {
+      background: #fff;
+      color: #3b82f6;
     }
 
     .btn:hover {
-      background: #00e5ff;
-      color: #0b0f16;
-      box-shadow: 0 0 25px #00e5ff;
-      transform: translateY(-2px);
+      opacity: 0.9;
     }
 
     section {
-      padding: 100px 20px;
-      max-width: 1100px;
+      padding: 90px 20px;
+      max-width: 980px;
       margin: 0 auto;
     }
 
     h2 {
-      font-family: 'Orbitron', sans-serif;
-      color: #00e5ff;
       font-size: 2rem;
+      font-weight: 700;
       text-align: center;
-      margin-bottom: 60px;
-      text-shadow: 0 0 10px #00e5ff80;
+      margin-bottom: 50px;
+      color: #111;
     }
 
+    p.center {
+      text-align: center;
+      max-width: 820px;
+      margin: 0 auto;
+      color: #444;
+      line-height: 1.75;
+    }
+
+    /* 카드형 특징 영역 */
     .features {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 30px;
+      gap: 26px;
+      margin-top: 40px;
     }
 
     .card {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 14px;
-      padding: 30px 25px;
-      backdrop-filter: blur(4px);
-      transition: all 0.3s ease;
+      background: #fff;
+      border: 1px solid #e5e7eb;
+      padding: 26px 22px;
+      border-radius: 12px;
+      transition: 0.2s ease;
     }
 
     .card:hover {
-      transform: translateY(-8px);
-      border-color: #00e5ff55;
-      box-shadow: 0 0 25px #00e5ff33;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
 
     .card h3 {
-      color: #00e5ff;
-      font-size: 1.3rem;
-      margin-bottom: 10px;
-      text-shadow: 0 0 6px #00e5ff66;
+      font-size: 1.2rem;
+      font-weight: 600;
+      margin-bottom: 12px;
+      color: #111;
     }
 
     .card p {
-      color: #c5d0da;
+      color: #555;
       font-size: 0.95rem;
       line-height: 1.6;
     }
 
-    .fadein {
-      opacity: 0;
-      transform: translateY(40px);
-      transition: all 0.8s ease;
-    }
-
-    .fadein.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
     footer {
+      padding: 40px 20px;
       text-align: center;
-      padding: 60px 20px;
-      border-top: 1px solid rgba(255, 255, 255, 0.08);
-      background: #080a0d;
       font-size: 0.9rem;
-      color: #888;
+      color: #666;
+      border-top: 1px solid #e5e7eb;
+      margin-top: 60px;
     }
 
     footer a {
-      color: #00e5ff;
+      color: #3b82f6;
       text-decoration: none;
     }
 
@@ -162,22 +154,16 @@
       text-decoration: underline;
     }
 
-    @keyframes float {
-      0% {
-        transform: translateY(0px);
-      }
-
-      50% {
-        transform: translateY(-10px);
-      }
-
-      100% {
-        transform: translateY(0px);
-      }
+    /* 페이드인 */
+    .fade {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: 0.7s ease;
     }
 
-    header img.logo {
-      animation: float 3s ease-in-out infinite;
+    .fade.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
   </style>
 </head>
@@ -185,94 +171,97 @@
 <body>
 
   <header>
-    <!-- TODO: 로고 이미지를 교체하려면 아래 src를 변경하세요 -->
-    <img src="https://is2you2.github.io/assets/img/pjcone.png" alt="Project Cone 로고" class="logo" />
+    <!-- TODO: 로고 이미지 교체 시 아래 src 변경 -->
+    <img src="https://is2you2.github.io/assets/img/pjcone.png" class="logo" alt="Project Cone 로고">
     <h1>Project: Cone</h1>
     <p>
-      Offline-first, privacy-focused collaboration tool.<br />
-      A creative workspace designed for small teams and content creators.
+      오프라인 우선(Offline-first), 프라이버시 중심, 폐쇄형 Closed-SNS 협업 플랫폼.<br />
+      초대받은 공간에서만 안전하게 작업할 수 있는 새로운 형태의 협업 도구입니다.
     </p>
+
     <div class="btn-group">
       <a href="https://is2you2.github.io/pjcone_pwa/" class="btn">Launch App</a>
+      <a href="https://is2you2.github.io/posts/instruction-pjcone-basic/" class="btn secondary">사용 설명서</a>
+      <a href="https://is2you2.github.io/posts/instruction-pjcone-server/" class="btn secondary">서버 구축 안내</a>
     </div>
   </header>
 
-  <section id="about" class="fadein">
-    <h2>About</h2>
-    <p style="text-align:center; max-width:800px; margin:0 auto; line-height:1.8;">
-      Project Cone은 네트워크 연결이 불안정한 환경에서도 작동하는 오프라인 우선 협업 플랫폼입니다.<br />
-      이메일 인증 없이 참여 가능한 익명 기반 구조를 통해, 자유로운 아이디어 교류와 실험적인 프로젝트 운영이 가능합니다.
+  <section class="fade" id="overview">
+    <h2>Overview</h2>
+    <p class="center">
+      Project Cone은 불안정한 네트워크 환경에서도 작업이 유지되는 오프라인 우선 기술을 기반으로 설계되었습니다.<br />
+      서버에 가입할 수는 있지만, 초대받지 않으면 다른 사용자와 대화를 할 수 없는 “Closed-SNS” 구조를 가지고 있어<br />
+      팀·프로젝트 단위의 안전한 협업이 가능합니다.
     </p>
   </section>
 
-  <section id="features" class="fadein">
-    <h2>Core Features</h2>
+  <section class="fade" id="features">
+    <h2>Key Features</h2>
+
     <div class="features">
+
       <div class="card">
-        <h3>🧭 채널 기반 커뮤니케이션</h3>
-        <p>팀별, 프로젝트별 대화를 채널로 분리하여 관리할 수 있으며, 개인 노트 공간도 제공합니다.</p>
+        <h3>🔒 Closed-SNS 구조</h3>
+        <p>검색·공개 타임라인 없이 초대된 채널에서만 협업이 이루어지는 폐쇄형 구조.  
+          개인 정보 노출이 없으며 팀 단위 집중 작업에 최적화.</p>
       </div>
+
       <div class="card">
-        <h3>🎯 퀘스트 기반 작업 관리</h3>
-        <p>작업을 퀘스트로 등록하고, 진행 상황을 시각적으로 추적할 수 있습니다.</p>
+        <h3>🌐 Offline-first 설계</h3>
+        <p>인터넷 연결이 끊겨도 작업이 유지되며, 다시 연결되면 자동으로 동기화됩니다.</p>
       </div>
+
       <div class="card">
-        <h3>🗂 파일 뷰어</h3>
-        <p>문서, 이미지, 오디오, 3D 모델 등 다양한 형식을 직접 열람하고 그림판으로 편집하여 협업 효율을 극대화합니다.</p>
+        <h3>🧭 채널 기반 협업</h3>
+        <p>프로젝트별·팀별로 채널을 나눠 대화를 구조화하여 효율적인 협업 환경을 제공합니다.</p>
       </div>
+
       <div class="card">
-        <h3>⚙️ 오프라인 자동 동기화</h3>
-        <p>네트워크 연결이 끊겨도 작업이 유지되며, 연결 시 자동으로 서버와 동기화됩니다.</p>
+        <h3>📁 내장 뷰어 & 편집기</h3>
+        <p>이미지, 문서, 오디오 등 다양한 파일을 브라우저 내에서 바로 열람하고 간단히 편집할 수 있습니다.</p>
       </div>
+
       <div class="card">
-        <h3>🔐 자체 서버 운영</h3>
-        <p>모든 데이터는 개인 또는 팀 서버에 저장되어, 완전한 자율성과 프라이버시를 제공합니다.</p>
+        <h3>🛠 자체 서버 운영</h3>
+        <p>모든 데이터는 사용자의 서버에 저장됩니다.  
+          관리형 서비스가 아닌 “사용자가 직접 소유하는 협업 플랫폼”입니다.</p>
       </div>
     </div>
   </section>
 
-  <section id="usage" class="fadein">
+  <section class="fade" id="getstarted">
     <h2>Get Started</h2>
-    <p style="text-align:center; max-width:800px; margin:0 auto; line-height:1.8;">
-      별도의 설치 없이 브라우저에서 바로 실행할 수 있습니다.<br />
-      PWA로 홈 화면에 추가하면 앱처럼 사용할 수 있으며, 서버 연결 시 팀 단위 협업이 가능합니다.<br />
-      도커 기반 서버로 누구나 쉽게 컴퓨터에 서버를 설치하실 수 있습니다.
+    <p class="center">
+      설치 없이 브라우저에서 바로 실행할 수 있으며, PWA로 홈 화면에 추가해 앱처럼 사용할 수 있습니다.<br />
+      서버를 연결하면 팀 단위 협업 기능이 활성화됩니다.
     </p>
-
-    <!-- 버튼 그룹 추가 -->
-    <div class="btn-group" style="margin-top:30px;">
-      <a href="https://is2you2.github.io/posts/instruction-pjcone-basic/" class="btn">사용설명서</a>
-      <a href="https://is2you2.github.io/posts/instruction-pjcone-server/" class="btn">서버 구축 설명서</a>
-    </div>
   </section>
 
-
-  <section id="vision" class="fadein">
+  <section class="fade" id="future">
     <h2>Future Vision</h2>
-    <p style="text-align:center; max-width:800px; margin:0 auto; line-height:1.8;">
-      Project Cone은 향후 실시간 협업에 도움이 되는 기능과 접근성 표준 지원(WCAG),<br />
-      커뮤니티 서버 기능 확장을 목표로 발전하고 있습니다.
+    <p class="center">
+      Project Cone은 향후 더 나은 실시간 협업 성능, 접근성 표준(WCAG) 지원,
+      그리고 확장 가능한 커뮤니티 기능 추가를 목표로 하고 있습니다.
     </p>
   </section>
 
   <footer>
-    <p>© <span id="year"></span> 그림또따</p>
-    <script>
-      document.getElementById('year').textContent = `2020-${new Date().getFullYear()}`;
-    </script>
+    <p>© <span id="year"></span> 플레이디버그연구소</p>
+    <p>사업자등록번호: 568-61-00832</p>
+    <p><a href="https://github.com/is2you2/pjcone_server">GitHub Repository</a></p>
   </footer>
 
   <script>
-    // 스크롤 시 페이드인 애니메이션
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-        }
-      });
-    }, { threshold: 0.1 });
+    document.getElementById('year').innerText = `2020-${new Date().getFullYear()}`;
 
-    document.querySelectorAll('.fadein').forEach(el => observer.observe(el));
+    // Fade-in scroll animation
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(e => {
+        if (e.isIntersecting) e.target.classList.add("visible");
+      });
+    }, { threshold: 0.15 });
+
+    document.querySelectorAll(".fade").forEach(el => observer.observe(el));
   </script>
 
 </body>
